--- a/Visual Basic/ReadMe
+++ b/Visual Basic/ReadMe
@@ -1,3 +1,2 @@
-These programs were made following this Visual Basic Tutorial: https://youtu.be/HFWQdGn5DaU
+These VB.NET programs were made following the FreeCodeCamp.Org Tutorial: https://youtu.be/HFWQdGn5DaU
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/HFWQdGn5DaU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
