--- a/Visual Basic/ReadMe
+++ b/Visual Basic/ReadMe
@@ -1,2 +1,3 @@
 These VB.NET programs were made following the FreeCodeCamp.Org Tutorial: https://youtu.be/HFWQdGn5DaU
 
+Code to these programs are in the Form1.vb file in each folder
